...
                android:gravity="center"
                android:textAlignment="center"
                android:textColorHint="@color/dark_purple"
                android:textColor="@color/dark_purple"/>

            <ImageButton
                android:id="@+id/btnTogglePass"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="Mostrar/ocultar contraseña"
                android:src="@drawable/ic_eye"/>
...
